# error_mock

./: Cargo.toml  README.md
src/: common.rs  domain.rs  infra.rs  lib.rs  main.rs  usecase.rs
src/domain/: crowdfunding.rs  errors.rs
src/infra/: client.rs  grpc.rs  repository.rs
src/usecase/: crowdfunding.rs
